<resources>
    <string name="app_name">JobApp</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="already_have_acc">Already have an account? Login</string>
    <string name="sign_up_email_hint">email</string>
    <string name="sign_up_password_hint">password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="login_dont_have_acc">Don\'t have an account? Sign Up</string>
    <string name="login_button_text">Login</string>
    <string name="title_activity_drawer">jobApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_edit_Ads_title">Edit Ads</string>
    <string name="nav_edit_profile_title">Edit Profile</string>
    <string name="new_ad_description_position">What position are you looking to fill?</string>
    <string name="new_ad_description_description">Job description :</string>
    <string name="new_ad_description_highlighted_text">Highlighted description/qualification</string>
    <string name="new_ad_description_qualification">Requested qualifications :</string>
    <string name="new_ad_title">Edit Your Ad</string>
    <string name="new_ad_edit_highlight_hint">e.g. \"Junior Developer\"  or  \"Remote\"</string>
    <string name="new_ad_edit_position_hint">e.g. iOS Developer</string>
    <string name="new_ad_edit_button">ADD</string>
    <string name="list_search_hint">Search</string>
    <string name="nav_add_ad">Add Ad</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="profile_welcome">Edit Your Profile</string>
    <string name="profile_text_employer">Name of your firm/business :</string>
    <string name="profile_employer_hint">e.g. Google Inc.</string>
    <string name="profile_text_email">Contact email :</string>
    <string name="profile_email_hint">example@gmail.com</string>
    <string name="profile_text_about">About you :</string>
    <string name="profile_about_hint">Google is an American multinational technology company that specializes in Internet-related services and products, which include online advertising technologies, search engine, cloud computing, software, and hardware.</string>
    <string name="profile_button">Update</string>
    <string name="detail_name">Employer :</string>
    <string name="details_email">Contact email:</string>
    <string name="details_position">Position:</string>
    <string name="details_description">Job description:</string>
    <string name="details_qualification">Qualifications:</string>
    <string name="login_email">email</string>
    <string name="login_password">password</string>
    <string name="search_bar">Search</string>
    <string name="action_search">Search...</string>
    <string name="edit_ads_text">Edit Your Ads</string>
    <string name="login_textview">Sign in</string>
    <string name="delete_button_text">Delete ad</string>
    <string name="new_ad_delete_button_text">Delete</string>
    <string name="edit_ad_button_text">Update</string>
    <string name="remember_login_checkbox">Remember me</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="check">check</string>
    <string name="log_out_menu_item">Log out</string>

</resources>

