<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/profile_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/layout_bg"
        android:text="@string/profile_welcome"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/profile_text_employer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/profile_text_employer"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/profile_employer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:hint="@string/profile_employer_hint"
        android:inputType="textPersonName"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/profile_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/profile_text_email"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/profile_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:hint="@string/profile_email_hint"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/profile_text_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/profile_text_about"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/profile_about"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="8dp"
        android:ems="10"
        android:hint="@string/profile_about_hint"
        android:inputType="textMultiLine"
        android:selectAllOnFocus="false"
        android:singleLine="false" />

    <Button
        android:id="@+id/profile_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight"
        android:text="@string/profile_button" />
</LinearLayout>