<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add_ad"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/nav_add_ad" />
        <item
            android:id="@+id/nav_edit_ads"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_edit_Ads_title" />
        <item
            android:id="@+id/nav_edit_Profile"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_edit_profile_title" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_profilepx"
            android:title="@string/log_out_menu_item" />
    </group>

</menu>
