<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:layout_margin="16dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/job_app" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/colorPrimaryLight"
        android:text="@string/login_button_text"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/login_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/login_dont_have_acc"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="italic" />

</LinearLayout>