<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_bg"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_name"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details_email"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail_email"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details_position"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail_position"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"

            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail_highlight"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details_description"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail_description"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:scrollbars="vertical"
            android:textAlignment="viewStart" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details_qualification"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail_qualification"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textAlignment="viewStart" />

        <TextView
            android:id="@+id/detail_about_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="About:" />

        <TextView
            android:id="@+id/detail_about"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textAlignment="viewStart" />

        <TextView
            android:id="@+id/detail_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textSize="18sp" />

    </LinearLayout>
</ScrollView>
